# FractalRanderer

./: CMakeLists.txt  README.md  render.cpp  renderer.cpp
ColoringSchemes/: CMakeLists.txt
ColoringSchemes/Include/: Classic.hpp  ColoringInterface.hpp  MyСoloring.hpp  Rainbow.hpp
ColoringSchemes/Source/: Classic.cpp  ColoringInterface.cpp  Greyscale.cpp
Fractals/: CMakeLists.txt
Fractals/Include/: CosFractal.hpp  FractalInterface.hpp  Mandelbrot.hpp
Fractals/Source/: FractalInterface.cpp  Mandelbrot.cpp
Renderer/: CMakeLists.txt
Renderer/Include/: Inputs.hpp  Logs.hpp  Renderer.hpp  ThreadingFunctionCall.hpp  TimeStatistic.hpp  WindowAndInputDataConnection.hpp  includes.hpp
Renderer/Source/: Inputs.cpp  Logs.cpp  Renderer.cpp  ThreadingFunctionCall.cpp  TimeStatistic.cpp  WindowAndInputDataConnection.cpp
